created MovieDTO, MovieService, MovieServiceInterface. Now the controller controls from MovieDTO

--- a/src/main/resources/application-prod.properties
+++ b/src/main/resources/application-prod.properties
@@ -1,5 +1,5 @@
 spring.application.name=Noviflix_backend (PRODUCTION)
-#hide api-docs:
+#hide api-docs (false if its production):
 springdoc.api-docs.enabled=false
 
 #disable h2 at prod:
@@ -27,3 +27,4 @@ spring.jpa.show-sql=true
 # render.com services needs:
 server.address=0.0.0.0
 server.port=8080
+server.url=https://noviflix-backend.onrender.com/api
