--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,8 +1,31 @@
-spring.application.name=Noviflix_backend
-# set which will be the active application.properties (prod/dev):
-# prod uses postgres
-# dev uses h2
-spring.profiles.active=dev
+# application-prod.properties uses postgres
+# application.properties uses h2
+
+
+#spring.profiles.active=prod
+
+spring.application.name=Noviflix_backend (test)
+
+
+
+spring.h2.console.enabled=true
+springdoc.api-docs.enabled=true
+
+# h2 configuration
+spring.datasource.url=jdbc:h2:file:./testdb
+spring.datasource.driver-class-name=org.h2.Driver
+spring.datasource.username=sa
+spring.datasource.password=sa
+spring.jpa.show-sql=true
+# auto create tables
+spring.jpa.hibernate.ddl-auto=update
+
+
+
+
 
 #springdoc.api-docs.path=/v3/api-docs
 #springdoc.swagger-ui.path=/swagger-ui.html
+
+# normally this is not can be viewed from github
+server.url=http://localhost:8080/api
