Add README.md and Screenshots

--- a/src/main/resources/application-prod.properties
+++ b/src/main/resources/application-prod.properties
@@ -1,6 +1,6 @@
 spring.application.name=Noviflix_backend (PRODUCTION)
 #hide api-docs (false if its production):
-springdoc.api-docs.enabled=false
+#springdoc.api-docs.enabled=false
 
 #disable h2 at prod:
 spring.h2.console.enabled=false
